--- a/在线编译（普通用户使用）.md
+++ b/在线编译（普通用户使用）.md
@@ -1,24 +1,23 @@
-### 1. Fork此项目
+### 1.Fork 本项目
 
 [点击这里](https://github.com/tw93/Pake/fork)
 
-### 2. 前往Actions
-- Click to go to the Actions interface, select `Build App With Cache`, fill in the form information, and click `Run Workflow`.
-- The form parameters and filling requirements are basically consistent with the parameters of the pake-cli. For details, please refer to the pake-cli documentation, [link](https://github.com/tw93/Pake/blob/master/bin/README_EN.md)
+### 2.前往Actions
+- 点击前往Actions界面，选择`Build App With Cache`，填写表单信息，点击`Run Workflow`即可。
+- 表单参数与填写要求基本和pake-cli参数保持一致，具体可以参考pake-cli文档，[链接](https://github.com/tw93/Pake/blob/master/bin/README.md)
 ![image](https://user-images.githubusercontent.com/28218658/223753696-0c5b51e3-8b75-4455-b9c3-d89216517daf.png)
 
-### 3. Download the attachment
-- If the small green icon appears, it means that the packaging is successful. You can click `build app with pake-cli` to view the packaging details and attachments.
+### 3.下载附件
+- 出现绿色小图标则代表打包成功，可以点击`build app with pake-cli`查看打包详情和附件。
 ![image](https://user-images.githubusercontent.com/28218658/223757048-06f38ecf-38a1-4aef-920f-ac5edcdfca13.png)
-- You can see that there is a 1 in `Artfacts` here, which means that there is an attachment available for download.
+- 可以看到这里的`Artfacts`出现了一个1,也就代表有一个附件可供下载。
 ![image](https://user-images.githubusercontent.com/28218658/223757384-10c8c2c5-d77c-4202-8572-668a2eca2e5f.png)
-- Click `Artfacts`, it will automatically jump to the bottom, you can see the final attachment information, click the attachment name to download it officially.
+- 点击`Artfacts`，自动跳转到最下方，可以看到最终的附件信息，点击该附件名即可正式下载。
 ![image](https://user-images.githubusercontent.com/28218658/223757788-08f9ce71-d2ae-49f8-b2a5-debbb9214bc2.png)
 
 
-### 4. 关于运行时间（简单了解即可）
+### 4.关于运行时间（简单了解即可）
 - 第一次运行会比较慢，大概10-15分钟左右，后续有了缓存后，就会快很多。
 - 尽量保证第一次完整运行，这样生成的缓存可以节省很多时间，如果运行失败，则生成的缓存不完整，后续就无法实现加速的效果。
 - 可以在Actions左下角的页面查看缓存，一般命名为`[打包平台]-Cargo-xxxx`，一般在400M-600M之间，如果缓存生成较小，只有几十M，可以通过右边的删除按钮删除缓存，那么下次构建会自动生成新缓存来代替。
 ![image](https://user-images.githubusercontent.com/28218658/223755867-7ecd413f-c50b-47b7-9816-4071250f3c16.png)
-
