--- a/在线编译（普通用户使用）.md
+++ b/在线编译（普通用户使用）.md
@@ -3,7 +3,7 @@
 [点击这里](https://github.com/tw93/Pake/fork)
 
 ### 2.前往Actions
-- 点击前往Actions界面，选择`Build App With Pake-cli`，填写表单信息，点击`Run Workflow`即可。
+- 点击前往Actions界面，选择`build app with pake-cli`，填写表单信息，点击`Run Workflow`即可。
 - 表单参数与填写要求基本和pake-cli参数保持一致，具体可以参考pake-cli文档，[链接](https://github.com/tw93/Pake/blob/master/bin/README.md#%E7%94%A8%E6%B3%95)。
 ![image](https://user-images.githubusercontent.com/28218658/223753696-0c5b51e3-8b75-4455-b9c3-d89216517daf.png)
 
