Updated 在线编译（普通用户使用） (markdown)

--- a/在线编译（普通用户使用）.md
+++ b/在线编译（普通用户使用）.md
@@ -3,12 +3,12 @@
 [点击这里](https://github.com/tw93/Pake/fork)
 
 ### 2.前往Actions
-- 点击前往Actions界面，选择`build app with pake-cli`，填写表单信息，点击`Run Workflow`即可。
+- 点击前往Actions界面，选择`Build app With Pake-Cli`，填写表单信息，点击`Run Workflow`即可。
 - 表单参数与填写要求基本和pake-cli参数保持一致，具体可以参考pake-cli文档，[链接](https://github.com/tw93/Pake/blob/master/bin/README.md#%E7%94%A8%E6%B3%95)。
 ![image](https://user-images.githubusercontent.com/28218658/223753696-0c5b51e3-8b75-4455-b9c3-d89216517daf.png)
 
 ### 3.下载附件
-- 出现绿色小图标则代表打包成功，可以点击`build app with pake-cli`查看打包详情和附件。
+- 出现绿色小图标则代表打包成功，可以点击`Build app With Pake-Cli`查看打包详情和附件。
 ![image](https://user-images.githubusercontent.com/28218658/223757048-06f38ecf-38a1-4aef-920f-ac5edcdfca13.png)
 - 可以看到这里的`Artfacts`出现了一个1,也就代表有一个附件可供下载。
 ![image](https://user-images.githubusercontent.com/28218658/223757384-10c8c2c5-d77c-4202-8572-668a2eca2e5f.png)
