Updated 在线编译（普通用户使用） (markdown)

--- a/在线编译（普通用户使用）.md
+++ b/在线编译（普通用户使用）.md
@@ -19,5 +19,5 @@
 ### 4.关于运行时间（简单了解即可）
 - 第一次运行会比较慢，大概10-15分钟左右，后续有了缓存后，就会快很多。
 - 尽量保证第一次完整运行，这样生成的缓存可以节省很多时间，如果运行失败，则生成的缓存不完整，后续就无法实现加速的效果。
-- 可以在Actions左下角的页面查看缓存，一般命名为`[打包平台]-Cargo-xxxx`，一般在400M-600M之间，如果缓存生成较小，只有几十M，可以通过右边的删除按钮删除缓存，那么下次构建会自动生成新缓存来代替。
-![image](https://user-images.githubusercontent.com/28218658/223755867-7ecd413f-c50b-47b7-9816-4071250f3c16.png)
+- 可以在Actions左下角的页面查看缓存，一般命名为`[打包平台]-cargo-xxxx`，一般在400M-600M之间，如果缓存生成较小，只有几十M，可以通过右边的删除按钮删除缓存，那么下次构建会自动生成新缓存来代替。
+![image](https://user-images.githubusercontent.com/28218658/224035969-39d331b4-f9aa-4104-b05a-36525b1b01d4.png)
