Updated 在线编译（普通用户使用） (markdown)

--- a/在线编译（普通用户使用）.md
+++ b/在线编译（普通用户使用）.md
@@ -4,7 +4,7 @@
 
 ### 2.前往Actions
 - 点击前往Actions界面，选择`Build App with Pake-Cli`，填写表单信息，点击`Run Workflow`即可。
-- 表单参数与填写要求基本和pake-cli参数保持一致，具体可以参考pake-cli文档，[链接](https://github.com/tw93/Pake/blob/master/bin/README.md#%E7%94%A8%E6%B3%95)。
+- 表单参数与填写要求基本和pake-cli参数保持一致，具体可以参考pake-cli文档[链接](https://github.com/tw93/Pake/blob/master/bin/README.md#%E7%94%A8%E6%B3%95)。
 ![image](https://user-images.githubusercontent.com/28218658/224034379-40d623ed-df91-4006-835d-ee852fcb55d4.png)
 
 ### 3.下载附件
